--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://i7c202.p.ssafy.io:3306/mydb?useSSL=false&useU
 # DB username
 spring.datasource.username=owo
 # DB password
-spring.datasource.password=owosos202
+spring.datasource.password=
 # JPA ???? ???
 spring.jpa.show-sql=true
 
@@ -52,10 +52,10 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.port=8282
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=202202
+server.ssl.key-store-password=
 
 openvidu.url=https://i7c202.p.ssafy.io:8443/
-openvidu.secret=owo202
+openvidu.secret=
 
 # Redis
 spring.redis.host=i7c202.p.ssafy.io
