--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # MySQL ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # DB Source URL
-spring.datasource.url=jdbc:mysql://i7c202.p.ssafy.io:3306/mydb?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&characterEncoding=utf8
+spring.datasource.url=
 # DB username
-spring.datasource.username=owo
+spring.datasource.username=
 # DB password
 spring.datasource.password=
 # JPA ???? ???
@@ -19,8 +19,8 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 # email setting
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=owo202202202@gmail.com
-spring.mail.password=rzipsgsyleatdyzu
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
